--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 </header>
 <section class="heroImg">
     <div class="content">
-        <img src="images/heroimage.png"alt="Olivia Olson" width="100%" height="100%">
         <p>
             I have a background in Psychology, as many years in customer service. I believe the former taught me the theories of empathy and the genuine fulfillment that comes with helping others, and the latter gave me practice. After encountering UX / UI design in school, I found a love for functional, research-backed products that would genuinely impact and improve the lives of users.
         </p>
-        <button type="button">Download Resume</button>
+        <img src="images/heroimage.png"alt="Olivia Olson" width="100%" height="100%">
+        <div class="container">
+            <div class="vertical-center">
+                <button type="button">Download Resume</button>
+            </div>
+          </div>
     </div>
 </section>    
 <footer>
